// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/auto-complete/demo/AutoComplete-and-Select.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-vertical"
  style="gap:16px"
>
  <div
    class="g-flex css-var-test-id"
  >
    <div
      class="g-select g-select-sm g-select-outlined css-var-test-id g-select-css-var g-select-single g-select-show-arrow g-select-show-search"
      style="width:200px"
    >
      <div
        class="g-select-content g-select-content-has-value g-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="search"
          value="centered"
        />
      </div>
      <div
        class="g-select-suffix"
      >
        <span
          aria-label="down"
          class="gicon gicon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="g-select g-select-sm g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
      style="width:200px"
    >
      <div
        class="g-select-content g-select-content-has-value g-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="centered"
        />
      </div>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id"
  >
    <div
      class="g-select g-select-outlined css-var-test-id g-select-css-var g-select-single g-select-show-arrow g-select-show-search"
      style="width:200px"
    >
      <div
        class="g-select-content g-select-content-has-value g-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="search"
          value="centered"
        />
      </div>
      <div
        class="g-select-suffix"
      >
        <span
          aria-label="down"
          class="gicon gicon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="g-select g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
      style="width:200px"
    >
      <div
        class="g-select-content g-select-content-has-value g-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="centered"
        />
      </div>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id"
  >
    <div
      class="g-select g-select-lg g-select-outlined css-var-test-id g-select-css-var g-select-single g-select-show-arrow g-select-show-search"
      style="width:200px"
    >
      <div
        class="g-select-content g-select-content-has-value g-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="search"
          value="centered"
        />
      </div>
      <div
        class="g-select-suffix"
      >
        <span
          aria-label="down"
          class="gicon gicon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="g-select g-select-lg g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
      style="width:200px"
    >
      <div
        class="g-select-content g-select-content-has-value g-select-content-has-search-value"
        title="centered"
      >
        centered
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="centered"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/allowClear.tsx correctly 1`] = `
Array [
  <div
    class="g-select g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        UnClearable
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="g-select g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        Customized clear icon
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>,
]
`;

exports[`renders components/auto-complete/demo/basic.tsx correctly 1`] = `
Array [
  <div
    class="g-select g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        input here
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="g-select g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        control mode
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>,
]
`;

exports[`renders components/auto-complete/demo/certain-category.tsx correctly 1`] = `
<div
  class="g-select g-select-outlined g-select-auto-complete g-select-customize css-var-test-id g-select-css-var g-select-single g-select-customize-input g-select-show-search"
  style="width:250px"
>
  <div
    class="g-select-content"
  >
    <div
      class="g-space-compact g-input-search css-var-test-id g-input-search-large g-select-input"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-input g-input-lg g-input-outlined css-var-test-id g-input-css-var g-input-compact-item g-input-compact-first-item"
        id="test-id"
        placeholder="input here"
        role="combobox"
        type="search"
        value=""
      />
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-lg g-btn-icon-only g-btn-compact-item g-btn-compact-last-item g-input-search-btn"
        type="button"
      >
        <span
          class="g-btn-icon"
        >
          <span
            aria-label="search"
            class="gicon gicon-search"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/custom.tsx correctly 1`] = `
<div
  class="g-select g-select-outlined g-select-auto-complete g-select-customize css-var-test-id g-select-css-var g-select-single g-select-customize-input g-select-show-search"
  style="width:200px"
>
  <div
    class="g-select-content"
  >
    <textarea
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="g-input g-input-outlined css-var-test-id g-input-css-var custom"
      id="test-id"
      placeholder="input here"
      role="combobox"
      style="height:50px"
      type="text"
    />
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/form-debug.tsx correctly 1`] = `
<form
  class="g-form g-form-horizontal css-var-test-id g-form-css-var"
  style="margin:0 auto"
>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-form-item-label g-col-xs-24 g-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="单独 AutoComplete"
        >
          单独 AutoComplete
        </label>
      </div>
      <div
        class="g-col g-form-item-control g-col-xs-24 g-col-sm-16 css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-select g-select-outlined g-select-in-form-item g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
            >
              <div
                class="g-select-content"
              >
                <div
                  class="g-select-placeholder"
                  style="visibility:visible"
                />
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  autocomplete="off"
                  class="g-select-input"
                  id="test-id"
                  role="combobox"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-form-item-label g-col-xs-24 g-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="单独 TreeSelect"
        >
          单独 TreeSelect
        </label>
      </div>
      <div
        class="g-col g-form-item-control g-col-xs-24 g-col-sm-16 css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-select g-tree-select g-select-outlined g-select-in-form-item css-var-test-id g-select-css-var g-tree-select-css-var g-select-single g-select-show-arrow"
            >
              <div
                class="g-select-content"
              >
                <div
                  class="g-select-placeholder"
                  style="visibility:visible"
                />
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  autocomplete="off"
                  class="g-select-input"
                  id="test-id"
                  readonly=""
                  role="combobox"
                  type="search"
                  value=""
                />
              </div>
              <div
                class="g-select-suffix"
              >
                <span
                  aria-label="down"
                  class="gicon gicon-down"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-form-item-label g-col-xs-24 g-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="添加 Input.Group 正常"
        >
          添加 Input.Group 正常
        </label>
      </div>
      <div
        class="g-col g-form-item-control g-col-xs-24 g-col-sm-16 css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-space-compact g-input-group css-var-test-id g-input-group-compact"
            >
              <div
                class="g-select g-tree-select g-select-outlined g-select-compact-item g-select-compact-first-item css-var-test-id g-select-css-var g-tree-select-css-var g-select-single g-select-show-arrow"
                style="width:30%"
              >
                <div
                  class="g-select-content"
                >
                  <div
                    class="g-select-placeholder"
                    style="visibility:visible"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="off"
                    class="g-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="search"
                    value=""
                  />
                </div>
                <div
                  class="g-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="gicon gicon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="g-select g-select-outlined g-select-compact-item g-select-compact-last-item g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
              >
                <div
                  class="g-select-content"
                >
                  <div
                    class="g-select-placeholder"
                    style="visibility:visible"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="off"
                    class="g-select-input"
                    id="test-id"
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-form-item-label g-col-xs-24 g-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="包含 search 图标正常"
        >
          包含 search 图标正常
        </label>
      </div>
      <div
        class="g-col g-form-item-control g-col-xs-24 g-col-sm-16 css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-select g-select-outlined g-select-in-form-item g-select-auto-complete g-select-customize css-var-test-id g-select-css-var g-select-single g-select-customize-input g-select-show-search"
            >
              <div
                class="g-select-content"
              >
                <span
                  class="g-input-affix-wrapper g-input-outlined g-select-input css-var-test-id g-input-css-var"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="off"
                    class="g-input"
                    id="test-id"
                    role="combobox"
                    type="text"
                    value=""
                  />
                  <span
                    class="g-input-suffix"
                  >
                    <span
                      aria-label="search"
                      class="gicon gicon-search"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-form-item-label g-col-xs-24 g-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="同时有 Input.Group 和图标发生移位"
        >
          同时有 Input.Group 和图标发生移位
        </label>
      </div>
      <div
        class="g-col g-form-item-control g-col-xs-24 g-col-sm-16 css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-space-compact g-input-group css-var-test-id g-input-group-compact"
            >
              <div
                class="g-select g-tree-select g-select-outlined g-select-compact-item g-select-compact-first-item css-var-test-id g-select-css-var g-tree-select-css-var g-select-single g-select-show-arrow"
                style="width:30%"
              >
                <div
                  class="g-select-content"
                >
                  <div
                    class="g-select-placeholder"
                    style="visibility:visible"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="off"
                    class="g-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="search"
                    value=""
                  />
                </div>
                <div
                  class="g-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="gicon gicon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="g-select g-select-outlined g-select-compact-item g-select-compact-last-item g-select-auto-complete g-select-customize css-var-test-id g-select-css-var g-select-single g-select-customize-input g-select-show-search"
              >
                <div
                  class="g-select-content"
                >
                  <span
                    class="g-input-affix-wrapper g-input-outlined g-select-input css-var-test-id g-input-css-var g-input-compact-item g-input-compact-last-item"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="g-input"
                      id="test-id"
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <span
                      class="g-input-suffix"
                    >
                      <span
                        aria-label="search"
                        class="gicon gicon-search"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-form-item-label g-col-xs-24 g-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="同时有 Input.Group 和 Search 组件发生移位"
        >
          同时有 Input.Group 和 Search 组件发生移位
        </label>
      </div>
      <div
        class="g-col g-form-item-control g-col-xs-24 g-col-sm-16 css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-space-compact g-input-group css-var-test-id g-input-group-compact"
            >
              <div
                class="g-select g-tree-select g-select-outlined g-select-compact-item g-select-compact-first-item css-var-test-id g-select-css-var g-tree-select-css-var g-select-single g-select-show-arrow"
                style="width:30%"
              >
                <div
                  class="g-select-content"
                >
                  <div
                    class="g-select-placeholder"
                    style="visibility:visible"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="off"
                    class="g-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="search"
                    value=""
                  />
                </div>
                <div
                  class="g-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="gicon gicon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="g-select g-select-outlined g-select-compact-item g-select-compact-last-item g-select-auto-complete g-select-customize css-var-test-id g-select-css-var g-select-single g-select-customize-input g-select-show-search"
              >
                <div
                  class="g-select-content"
                >
                  <div
                    class="g-space-compact g-input-search css-var-test-id g-select-input"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="g-input g-input-outlined css-var-test-id g-input-css-var g-input-compact-item"
                      id="test-id"
                      role="combobox"
                      type="search"
                      value=""
                    />
                    <button
                      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-compact-item g-btn-compact-last-item g-input-search-btn"
                      type="button"
                    >
                      <span
                        class="g-btn-icon"
                      >
                        <span
                          aria-label="search"
                          class="gicon gicon-search"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-form-item css-var-test-id g-form-css-var g-form-item-horizontal"
  >
    <div
      class="g-row g-form-item-row css-var-test-id"
    >
      <div
        class="g-col g-form-item-label g-col-xs-24 g-col-sm-8 css-var-test-id"
      >
        <label
          class=""
          title="Input Group 和 Button 结合"
        >
          Input Group 和 Button 结合
        </label>
      </div>
      <div
        class="g-col g-form-item-control g-col-xs-24 g-col-sm-16 css-var-test-id"
      >
        <div
          class="g-form-item-control-input"
        >
          <div
            class="g-form-item-control-input-content"
          >
            <div
              class="g-space-compact g-input-group css-var-test-id g-input-group-compact"
            >
              <div
                class="g-select g-tree-select g-select-outlined g-select-compact-item g-select-compact-first-item css-var-test-id g-select-css-var g-tree-select-css-var g-select-single g-select-show-arrow"
                style="width:20%"
              >
                <div
                  class="g-select-content"
                >
                  <div
                    class="g-select-placeholder"
                    style="visibility:visible"
                  />
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    autocomplete="off"
                    class="g-select-input"
                    id="test-id"
                    readonly=""
                    role="combobox"
                    type="search"
                    value=""
                  />
                </div>
                <div
                  class="g-select-suffix"
                >
                  <span
                    aria-label="down"
                    class="gicon gicon-down"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="g-select g-select-outlined g-select-compact-item g-select-auto-complete g-select-customize css-var-test-id g-select-css-var g-select-single g-select-customize-input g-select-show-search"
              >
                <div
                  class="g-select-content"
                >
                  <div
                    class="g-space-compact g-input-search css-var-test-id g-select-input"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      autocomplete="off"
                      class="g-input g-input-outlined css-var-test-id g-input-css-var g-input-compact-item"
                      id="test-id"
                      role="combobox"
                      type="search"
                      value=""
                    />
                    <button
                      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined g-btn-icon-only g-btn-compact-item g-input-search-btn"
                      type="button"
                    >
                      <span
                        class="g-btn-icon"
                      >
                        <span
                          aria-label="search"
                          class="gicon gicon-search"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="search"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <button
                class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid g-btn-compact-item g-btn-compact-last-item"
                type="button"
              >
                <span
                  class="g-btn-icon"
                >
                  <span
                    aria-label="search"
                    class="gicon gicon-search"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  Search
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders components/auto-complete/demo/non-case-sensitive.tsx correctly 1`] = `
<div
  class="g-select g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
  style="width:200px"
>
  <div
    class="g-select-content"
  >
    <div
      class="g-select-placeholder"
      style="visibility:visible"
    >
      try to type \`b\`
    </div>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="g-select-input"
      id="test-id"
      role="combobox"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/options.tsx correctly 1`] = `
<div
  class="g-select g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
  style="width:200px"
>
  <div
    class="g-select-content"
  >
    <div
      class="g-select-placeholder"
      style="visibility:visible"
    >
      input here
    </div>
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="g-select-input"
      id="test-id"
      role="combobox"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/render-panel.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-start g-flex-gap-small g-flex-vertical"
>
  <button
    aria-checked="false"
    class="g-switch css-var-test-id"
    role="switch"
    type="button"
  >
    <div
      class="g-switch-handle"
    />
    <span
      class="g-switch-inner"
    >
      <span
        class="g-switch-inner-checked"
      />
      <span
        class="g-switch-inner-unchecked"
      />
    </span>
  </button>
  <div
    style="padding-bottom:0;position:relative;min-width:0"
  >
    <div
      class="g-select g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
      style="width:120px;margin:0"
    >
      <div
        class="g-select-content g-select-content-has-value g-select-content-has-search-value"
        title="Lucy"
      >
        Lucy
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value="lucy"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/status.tsx correctly 1`] = `
<div
  class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  style="width:100%"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-select g-select-outlined g-select-status-error g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
      style="width:200px"
    >
      <div
        class="g-select-content"
      >
        <div
          class="g-select-placeholder"
          style="visibility:visible"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-select g-select-outlined g-select-status-warning g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
      style="width:200px"
    >
      <div
        class="g-select-content"
      >
        <div
          class="g-select-placeholder"
          style="visibility:visible"
        />
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="g-select-input"
          id="test-id"
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/style-class.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-gap-medium g-flex-vertical"
>
  <div
    class="g-select g-select-outlined g-select-auto-complete acss-1rj0z6b css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        object styles
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="g-select g-select-filled g-select-auto-complete acss-1rj0z6b css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        function styles
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/uncertain-category.tsx correctly 1`] = `
<div
  class="g-select g-select-outlined g-select-auto-complete g-select-customize css-var-test-id g-select-css-var g-select-single g-select-customize-input g-select-show-search"
  style="width:300px"
>
  <div
    class="g-select-content"
  >
    <div
      class="g-space-compact g-input-search css-var-test-id g-input-search-large g-input-search-with-button g-select-input"
    >
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-input g-input-lg g-input-outlined css-var-test-id g-input-css-var g-input-compact-item g-input-compact-first-item"
        id="test-id"
        placeholder="input here"
        role="combobox"
        type="search"
        value=""
      />
      <button
        class="g-btn css-var-test-id g-btn-default g-btn-color-primary g-btn-varig-solid g-btn-lg g-btn-compact-item g-btn-compact-last-item g-input-search-btn"
        type="button"
      >
        <span
          class="g-btn-icon"
        >
          <span
            aria-label="search"
            class="gicon gicon-search"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/auto-complete/demo/variant.tsx correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-align-stretch g-flex-vertical"
  style="gap:12px"
>
  <div
    class="g-select g-select-outlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        Outlined
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="g-select g-select-filled g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        Filled
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="g-select g-select-borderless g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        Borderless
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="g-select g-select-underlined g-select-auto-complete css-var-test-id g-select-css-var g-select-single g-select-show-search"
    style="width:200px"
  >
    <div
      class="g-select-content"
    >
      <div
        class="g-select-placeholder"
        style="visibility:visible"
      >
        Underlined
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="g-select-input"
        id="test-id"
        role="combobox"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
